socioprophet-web/current-server.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "nginx-1"
  namespace: "default"
  labels:
    app: "nginx-1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "nginx-1"
  template:
    metadata:
      labels:
        app: "nginx-1"
    spec:
      containers:
        - name: "sp-server-1"
          image: "gcr.io/socioprophet-web/sp-server:1.0"
          ports:
            - containerPort: 5001
