socioprophet-web/service-sp.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-sp
spec:
  selector:
    app: platform
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
