socioprophet-web/ingress-sp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sp
  annotations:
    kubernetes.io/ingress.global-static-ip-name: address-sp
    networking.gke.io/managed-certificates: certificate-sp
spec:
  backend:
    serviceName: service-sp
    servicePort: 8081
